Finally fixed my issue, me stoopid. Was recreating the depth buffer when re-binding the backbuffer rather than the editor frame buffer > Frame buffers now work, can have their own depth buffers >Fixed weird FOV due to incorrect viewport settings >Added the debug device, commented out for now tho >Made imgui layer consume input TODO: Manage viewports for frame buffers properly

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexElement.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Vertex\VertexLayout.h" />
     <ClInclude Include="Source\Flow\Rendering\DX11\DX11RenderAPI.h" />
+    <ClInclude Include="Source\Flow\Rendering\Other\DepthBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\Other\FrameBuffer.h" />
     <ClInclude Include="Source\Flow\Rendering\RenderAPI.h" />
     <ClInclude Include="Source\Flow\Rendering\RenderCommand.h" />
@@ -398,6 +399,7 @@
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexElement.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Vertex\VertexLayout.cpp" />
     <ClCompile Include="Source\Flow\Rendering\DX11\DX11RenderAPI.cpp" />
+    <ClCompile Include="Source\Flow\Rendering\Other\DepthBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Other\FrameBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\RenderAPI.cpp" />
     <ClCompile Include="Source\Flow\Rendering\RenderCommand.cpp" />
