--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Example DockSpace]
 Pos=0,19
-Size=1920,998
+Size=1280,721
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
@@ -9,7 +9,7 @@ Collapsed=0
 
 [Window][Light]
 Pos=0,19
-Size=246,787
+Size=246,520
 Collapsed=0
 DockId=0x00000001,0
 
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1587,344
-Size=333,462
+Pos=914,193
+Size=366,346
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=997,808
-Size=923,209
+Pos=639,541
+Size=641,199
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -42,8 +42,8 @@ Size=866,668
 Collapsed=0
 
 [Window][Asset System]
-Pos=997,808
-Size=923,209
+Pos=639,541
+Size=641,199
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -63,14 +63,14 @@ Size=556,510
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=1587,19
-Size=333,323
+Pos=914,19
+Size=366,172
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=997,808
-Size=923,209
+Pos=639,541
+Size=641,199
 Collapsed=0
 DockId=0x0000000C,2
 
@@ -80,29 +80,29 @@ Size=302,457
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,808
-Size=995,209
+Pos=0,541
+Size=637,199
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000008,0
 
 [Window][Scene]
 Pos=248,19
-Size=1337,787
+Size=664,520
 Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1920,998 Split=Y
-  DockNode        ID=0x00000008 Parent=0xD9E1F891 SizeRef=1280,568 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1585,721 Split=X
+DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
+  DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,520 Split=X
+    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=912,721 Split=X
       DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=246,721 Selected=0xAADB73F3
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1337,721 CentralNode=1 Selected=0x18B8C0DE
-    DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=333,721 Split=Y Selected=0xE884D536
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=664,721 CentralNode=1 Selected=0x18B8C0DE
+    DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=366,721 Split=Y Selected=0xE884D536
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
-        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,233 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,333 Selected=0xF02CD328
-  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1280,151 Split=X Selected=0x24DDE09A
-    DockNode      ID=0x0000000B Parent=0x00000007 SizeRef=663,213 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=615,213 Selected=0x24DDE09A
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,172 Selected=0x0A670937
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,346 Selected=0xF02CD328
+  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,199 Split=X Selected=0x24DDE09A
+    DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=550,218 Selected=0xB04EBF39
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x24DDE09A
 
