--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -8,10 +8,10 @@ Size=1280,740
 Collapsed=0
 
 [Window][Light]
-Pos=0,19
-Size=246,525
+Pos=950,268
+Size=330,276
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000A,1
 
 [Window][Debug##Default]
 Pos=60,60
@@ -89,13 +89,13 @@ DockId=0x00000008,0
 Pos=248,19
 Size=1175,727
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][###]
 Pos=248,19
 Size=700,525
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][### - Playing]
 Pos=60,60
@@ -103,23 +103,34 @@ Size=32,32
 Collapsed=0
 
 [Window][###Scene]
-Pos=248,19
-Size=700,525
+Pos=138,19
+Size=810,525
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Create New Level]
+Pos=235,143
+Size=337,71
+Collapsed=0
+
+[Window][Actor Spawner]
+Pos=0,19
+Size=136,525
+Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
 DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
   DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,525 Split=X
-    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=948,721 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=246,721 Selected=0xAADB73F3
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=700,721 CentralNode=1 Selected=0xB32CD986
+    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=948,721 Split=X Selected=0xB32CD986
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=136,525 Selected=0xD6FA1636
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=810,525 CentralNode=1 Selected=0xB32CD986
     DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=330,721 Split=Y Selected=0xE884D536
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,247 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,276 Selected=0xF02CD328
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,276 Selected=0xAADB73F3
   DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,194 Split=X Selected=0x24DDE09A
     DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=550,218 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x3F488DE8
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x24DDE09A
 
