Loads of misc stuff.
>Fixed a load of bugs that i forgot
>Fixed texture format conversion not actually storing the converted texture
>Moved some inspector functionality to the selection tool.
> Added a custom actor spawning window
> Added viewport selection events
> Added scene manager

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -122,8 +122,12 @@
     <ClInclude Include="Source\Flow\Editor\EditorCamera.h" />
     <ClInclude Include="Source\Flow\Editor\Inspector.h" />
     <ClInclude Include="Source\Flow\Editor\LevelManager.h" />
+    <ClInclude Include="Source\Flow\Editor\SceneManager.h" />
     <ClInclude Include="Source\Flow\Editor\SelectionGizmo.h" />
+    <ClInclude Include="Source\Flow\Editor\MenuBar.h" />
     <ClInclude Include="Source\Flow\Editor\Toolbar.h" />
+    <ClInclude Include="Source\Flow\Editor\Tools\SelectionTool.h" />
+    <ClInclude Include="Source\Flow\Editor\Tools\Tool.h" />
     <ClInclude Include="Source\Flow\Editor\Windows\AssetWindow.h" />
     <ClInclude Include="Source\Flow\Editor\Windows\CollisionEditor.h" />
     <ClInclude Include="Source\Flow\Editor\Windows\EditorWindow.h" />
@@ -160,6 +164,7 @@
     <ClInclude Include="Source\Flow\Helper\Archive.h" />
     <ClInclude Include="Source\Flow\Helper\BulletDebugDrawing.h" />
     <ClInclude Include="Source\Flow\Helper\HelperMacros.h" />
+    <ClInclude Include="Source\Flow\Helper\ImGuiHelper.h" />
     <ClInclude Include="Source\Flow\Helper\Maths.h" />
     <ClInclude Include="Source\Flow\Helper\Maths\Transformations\Rotator.h" />
     <ClInclude Include="Source\Flow\Helper\Maths\Transformations\Transform.h" />
@@ -170,11 +175,13 @@
     <ClInclude Include="Source\Flow\Input\Input.h" />
     <ClInclude Include="Source\Flow\Input\KeyCodes.h" />
     <ClInclude Include="Source\Flow\Input\WindowsInput.h" />
-    <ClInclude Include="Source\Flow\Layers\EditorLayer.h" />
+    <ClInclude Include="Source\Flow\Editor\EditorLayer.h" />
+    <ClInclude Include="Source\Flow\Layers\GameLayer.h" />
     <ClInclude Include="Source\Flow\Layers\LayerStack.h" />
     <ClInclude Include="Source\Flow\Logging\Log.h" />
     <ClInclude Include="Source\Flow\Layers\Layer.h" />
     <ClInclude Include="Source\Flow\Physics\MotionState.h" />
+    <ClInclude Include="Source\Flow\Physics\Physics.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindable.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\BindableCodex.h" />
     <ClInclude Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.h" />
@@ -325,8 +332,12 @@
     <ClCompile Include="Source\Flow\Editor\EditorCamera.cpp" />
     <ClCompile Include="Source\Flow\Editor\Inspector.cpp" />
     <ClCompile Include="Source\Flow\Editor\LevelManager.cpp" />
+    <ClCompile Include="Source\Flow\Editor\SceneManager.cpp" />
     <ClCompile Include="Source\Flow\Editor\SelectionGizmo.cpp" />
+    <ClCompile Include="Source\Flow\Editor\MenuBar.cpp" />
     <ClCompile Include="Source\Flow\Editor\Toolbar.cpp" />
+    <ClCompile Include="Source\Flow\Editor\Tools\SelectionTool.cpp" />
+    <ClCompile Include="Source\Flow\Editor\Tools\Tool.cpp" />
     <ClCompile Include="Source\Flow\Editor\Windows\AssetWindow.cpp" />
     <ClCompile Include="Source\Flow\Editor\Windows\CollisionEditor.cpp" />
     <ClCompile Include="Source\Flow\Editor\Windows\EditorWindow.cpp" />
@@ -365,11 +376,13 @@
     <ClCompile Include="Source\Flow\Helper\Profiling.cpp" />
     <ClCompile Include="Source\Flow\Helper\Timer.cpp" />
     <ClCompile Include="Source\Flow\Input\WindowsInput.cpp" />
-    <ClCompile Include="Source\Flow\Layers\EditorLayer.cpp" />
+    <ClCompile Include="Source\Flow\Editor\EditorLayer.cpp" />
+    <ClCompile Include="Source\Flow\Layers\GameLayer.cpp" />
     <ClCompile Include="Source\Flow\Layers\LayerStack.cpp" />
     <ClCompile Include="Source\Flow\Logging\Log.cpp" />
     <ClCompile Include="Source\Flow\Layers\Layer.cpp" />
     <ClCompile Include="Source\Flow\Physics\MotionState.cpp" />
+    <ClCompile Include="Source\Flow\Physics\Physics.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableCodex.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\BindableVertexBuffer.cpp" />
     <ClCompile Include="Source\Flow\Rendering\Core\Bindables\Blender.cpp" />
