--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -8,19 +8,19 @@ Size=1280,740
 Collapsed=0
 
 [Window][Light]
-Pos=950,268
-Size=330,276
+Pos=1425,363
+Size=495,384
 Collapsed=0
-DockId=0x0000000A,1
+DockId=0x0000000A,0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=301,114
 Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=950,268
-Size=330,276
+Pos=1035,268
+Size=245,324
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,19 +31,19 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=639,546
-Size=641,194
+Pos=639,594
+Size=641,146
 Collapsed=0
-DockId=0x0000000C,1
+DockId=0x0000000C,0
 
 [Window][Dear ImGui Demo]
-Pos=287,65
-Size=866,668
+Pos=270,28
+Size=734,608
 Collapsed=0
 
 [Window][Asset System]
-Pos=639,546
-Size=641,194
+Pos=958,749
+Size=962,268
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -63,16 +63,16 @@ Size=556,510
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=950,19
-Size=330,247
+Pos=1035,19
+Size=245,247
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=639,546
-Size=641,194
+Pos=639,594
+Size=641,146
 Collapsed=0
-DockId=0x0000000C,2
+DockId=0x0000000C,1
 
 [Window][Editor Settings]
 Pos=60,60
@@ -80,8 +80,8 @@ Size=302,457
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,546
-Size=637,194
+Pos=0,594
+Size=637,146
 Collapsed=0
 DockId=0x00000008,0
 
@@ -103,34 +103,47 @@ Size=32,32
 Collapsed=0
 
 [Window][###Scene]
-Pos=138,19
-Size=810,525
+Pos=155,19
+Size=878,573
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0000000D,0
 
 [Window][Create New Level]
-Pos=235,143
-Size=337,71
+Pos=140,171
+Size=350,70
 Collapsed=0
 
 [Window][Actor Spawner]
 Pos=0,19
-Size=136,525
+Size=153,573
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Toolbar]
+Pos=148,623
+Size=800,72
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Selection Tool Config]
+Pos=224,90
+Size=381,83
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
-  DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,525 Split=X
-    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=948,721 Split=X Selected=0xB32CD986
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=136,525 Selected=0xD6FA1636
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=810,525 CentralNode=1 Selected=0xB32CD986
-    DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=330,721 Split=Y Selected=0xE884D536
+  DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,573 Split=X
+    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=1033,721 Split=X Selected=0xB32CD986
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=153,525 Selected=0xD6FA1636
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=878,525 Split=Y Selected=0xB32CD986
+        DockNode  ID=0x0000000D Parent=0x00000002 SizeRef=800,602 CentralNode=1 Selected=0xB32CD986
+        DockNode  ID=0x0000000E Parent=0x00000002 SizeRef=800,72 Selected=0x507852CA
+    DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=245,721 Split=Y Selected=0xE884D536
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,247 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,276 Selected=0xAADB73F3
-  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,194 Split=X Selected=0x24DDE09A
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,324 Selected=0xF02CD328
+  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,146 Split=X Selected=0x24DDE09A
     DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=550,218 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x24DDE09A
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0xDC408BFB
 
