--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -20,7 +20,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1035,268
-Size=245,324
+Size=245,328
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,8 +31,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=639,594
-Size=641,146
+Pos=639,598
+Size=641,142
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -69,8 +69,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=639,594
-Size=641,146
+Pos=639,598
+Size=641,142
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -80,8 +80,8 @@ Size=302,457
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,594
-Size=637,146
+Pos=0,598
+Size=637,142
 Collapsed=0
 DockId=0x00000008,0
 
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=155,19
-Size=878,573
+Size=878,577
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -115,7 +115,7 @@ Collapsed=0
 
 [Window][Actor Spawner]
 Pos=0,19
-Size=153,573
+Size=153,577
 Collapsed=0
 DockId=0x00000001,0
 
@@ -130,9 +130,20 @@ Pos=224,90
 Size=381,83
 Collapsed=0
 
+[Window][Example: Console]
+Pos=760,95
+Size=520,600
+Collapsed=0
+
+[Window][Output]
+Pos=639,594
+Size=641,146
+Collapsed=0
+DockId=0x0000000C,2
+
 [Docking][Data]
 DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
-  DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,573 Split=X
+  DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,577 Split=X
     DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=1033,721 Split=X Selected=0xB32CD986
       DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=153,525 Selected=0xD6FA1636
       DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=878,525 Split=Y Selected=0xB32CD986
@@ -142,8 +153,8 @@ DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,247 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,324 Selected=0xF02CD328
-  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,146 Split=X Selected=0x24DDE09A
+        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,328 Selected=0xF02CD328
+  DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,142 Split=X Selected=0x24DDE09A
     DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=550,218 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0xDC408BFB
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x3F488DE8
 
