Some stuff, dunno waht

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1035,268
-Size=245,328
+Pos=930,268
+Size=350,328
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -37,7 +37,7 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Dear ImGui Demo]
-Pos=270,28
+Pos=273,27
 Size=734,608
 Collapsed=0
 
@@ -63,8 +63,8 @@ Size=556,510
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=1035,19
-Size=245,247
+Pos=930,19
+Size=350,247
 Collapsed=0
 DockId=0x00000009,0
 
@@ -103,8 +103,8 @@ Size=32,32
 Collapsed=0
 
 [Window][###Scene]
-Pos=155,19
-Size=878,577
+Pos=228,19
+Size=700,577
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -115,7 +115,7 @@ Collapsed=0
 
 [Window][Actor Spawner]
 Pos=0,19
-Size=153,577
+Size=226,577
 Collapsed=0
 DockId=0x00000001,0
 
@@ -144,17 +144,17 @@ DockId=0x0000000C,2
 [Docking][Data]
 DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=Y
   DockNode        ID=0x0000000B Parent=0xD9E1F891 SizeRef=1106,577 Split=X
-    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=1033,721 Split=X Selected=0xB32CD986
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=153,525 Selected=0xD6FA1636
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=878,525 Split=Y Selected=0xB32CD986
+    DockNode      ID=0x00000003 Parent=0x0000000B SizeRef=644,721 Split=X Selected=0xB32CD986
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=157,525 Selected=0xD6FA1636
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=485,525 Split=Y Selected=0xB32CD986
         DockNode  ID=0x0000000D Parent=0x00000002 SizeRef=800,602 CentralNode=1 Selected=0xB32CD986
         DockNode  ID=0x0000000E Parent=0x00000002 SizeRef=800,72 Selected=0x507852CA
-    DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=245,721 Split=Y Selected=0xE884D536
+    DockNode      ID=0x00000004 Parent=0x0000000B SizeRef=243,721 Split=Y Selected=0xE884D536
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,247 Selected=0x0A670937
         DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,328 Selected=0xF02CD328
   DockNode        ID=0x00000007 Parent=0xD9E1F891 SizeRef=1106,142 Split=X Selected=0x24DDE09A
     DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=550,218 Selected=0xB04EBF39
-    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0x3F488DE8
+    DockNode      ID=0x0000000C Parent=0x00000007 SizeRef=554,218 Selected=0xDC408BFB
 
