More asset browser updates: -Engine manages the asset map properly, no need for manual edits anymore to load specific files -Can now import supported assets, will be added to the asset map - Asset browser has proper interface - Can rename files in engine.
TODO:
- Save the original path on the asset so that it can be kept between sessions.

--- a/Flow/Flow.vcxproj
+++ b/Flow/Flow.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="Source\Flow\Maths\Vector4.h" />
     <ClInclude Include="Source\Flow\Typedefs.h" />
     <ClInclude Include="Source\Flow\Utils\BulletDebugDrawing.h" />
+    <ClInclude Include="Source\Flow\Utils\FileSystem.h" />
     <ClInclude Include="Source\Flow\Utils\HelperMacros.h" />
     <ClInclude Include="Source\Flow\Utils\ImGuiHelper.h" />
     <ClInclude Include="Source\Flow\Maths\Rotator.h" />
