--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -19,8 +19,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=885,243
-Size=395,497
+Pos=1062,237
+Size=218,503
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -31,14 +31,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Application Statistics]
-Pos=885,243
-Size=395,497
+Pos=1062,237
+Size=218,503
 Collapsed=0
 DockId=0x0000000A,2
 
 [Window][Dear ImGui Demo]
-Pos=517,79
-Size=734,608
+Pos=360,31
+Size=620,624
 Collapsed=0
 
 [Window][Asset System]
@@ -48,8 +48,8 @@ Collapsed=0
 DockId=0xD9E1F891,0
 
 [Window][Bullet Physics Debug Colours]
-Pos=611,90
-Size=261,572
+Pos=370,96
+Size=351,192
 Collapsed=0
 
 [Window][Style Editor]
@@ -63,14 +63,14 @@ Size=556,510
 Collapsed=0
 
 [Window][Scene Heirarchy]
-Pos=885,19
-Size=395,222
+Pos=1062,19
+Size=218,216
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering Configuration]
-Pos=885,243
-Size=395,497
+Pos=1062,237
+Size=218,503
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -80,8 +80,8 @@ Size=302,457
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=103,459
-Size=780,281
+Pos=153,769
+Size=1437,258
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -104,9 +104,9 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=103,19
-Size=780,438
+Size=957,455
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Create New Level]
 Pos=140,171
@@ -126,7 +126,7 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Selection Tool Config]
-Pos=224,90
+Pos=220,95
 Size=381,83
 Collapsed=0
 
@@ -141,18 +141,36 @@ Size=641,146
 Collapsed=0
 DockId=0xD9E1F891,2
 
+[Window][Popout]
+Pos=759,123
+Size=432,281
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=316,268
+Collapsed=0
+
+[Window][Asset Browser Editor]
+Pos=103,476
+Size=957,264
+Collapsed=0
+DockId=0x0000000F,0
+
 [Docking][Data]
-DockSpace         ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=X
-  DockNode        ID=0x00000001 Parent=0xD9E1F891 SizeRef=151,1008 Selected=0xD6FA1636
-  DockNode        ID=0x00000002 Parent=0xD9E1F891 SizeRef=1767,1008 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=780,721 Split=Y Selected=0xB32CD986
-      DockNode    ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
-        DockNode  ID=0x00000007 Parent=0x0000000D SizeRef=1532,725 CentralNode=1 Selected=0xB32CD986
-        DockNode  ID=0x0000000B Parent=0x0000000D SizeRef=1532,281 Selected=0xB04EBF39
-      DockNode    ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=395,721 Split=Y Selected=0xE884D536
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
-        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=254,217 Selected=0x0A670937
-        DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=254,486 Selected=0xF02CD328
+DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=X
+  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=151,1008 Selected=0xD6FA1636
+  DockNode          ID=0x00000002 Parent=0xD9E1F891 SizeRef=1767,1008 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1437,721 Split=Y Selected=0xB32CD986
+      DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
+        DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 Split=Y Selected=0xB32CD986
+          DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=957,455 CentralNode=1 Selected=0xB32CD986
+          DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=957,264 Selected=0x04985A5E
+        DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
+      DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=328,721 Split=Y Selected=0xE884D536
+      DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
+      DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
+        DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Selected=0xDC408BFB
 
