Added combo boxes for configuring materials and meshes on a static mesh component

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -104,7 +104,7 @@ Collapsed=0
 
 [Window][###Scene]
 Pos=103,19
-Size=957,455
+Size=957,446
 Collapsed=0
 DockId=0x00000008,0
 
@@ -152,25 +152,25 @@ Size=316,268
 Collapsed=0
 
 [Window][Asset Browser Editor]
-Pos=103,476
-Size=957,264
+Pos=103,467
+Size=957,273
 Collapsed=0
 DockId=0x0000000F,0
 
 [Docking][Data]
 DockSpace           ID=0xD9E1F891 Window=0x89AB0193 Pos=0,19 Size=1280,721 Split=X
-  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=151,1008 Selected=0xD6FA1636
-  DockNode          ID=0x00000002 Parent=0xD9E1F891 SizeRef=1767,1008 Split=X
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=1437,721 Split=Y Selected=0xB32CD986
+  DockNode          ID=0x00000001 Parent=0xD9E1F891 SizeRef=101,1008 Selected=0xD6FA1636
+  DockNode          ID=0x00000002 Parent=0xD9E1F891 SizeRef=1177,1008 Split=X
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=957,721 Split=Y Selected=0xB32CD986
       DockNode      ID=0x0000000D Parent=0x00000003 SizeRef=800,602 Split=Y Selected=0xB32CD986
         DockNode    ID=0x00000007 Parent=0x0000000D SizeRef=1532,748 Split=Y Selected=0xB32CD986
-          DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=957,455 CentralNode=1 Selected=0xB32CD986
-          DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=957,264 Selected=0x04985A5E
+          DockNode  ID=0x00000008 Parent=0x00000007 SizeRef=957,446 CentralNode=1 Selected=0xB32CD986
+          DockNode  ID=0x0000000F Parent=0x00000007 SizeRef=957,273 Selected=0x04985A5E
         DockNode    ID=0x0000000B Parent=0x0000000D SizeRef=1532,258 Selected=0xB04EBF39
       DockNode      ID=0x0000000E Parent=0x00000003 SizeRef=800,72 Selected=0x507852CA
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=328,721 Split=Y Selected=0xE884D536
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=218,721 Split=Y Selected=0xE884D536
       DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=254,278 Selected=0xE884D536
       DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=254,302 Split=Y Selected=0xF02CD328
         DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=254,111 Selected=0x0A670937
-        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Selected=0xDC408BFB
+        DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=254,259 Selected=0xF02CD328
 
